<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory 
    android:title="@string/pref_title_platform_joystick"
    android:key="pref_key_platform_joystick">
    <EditTextPreference 
      android:key="pref_key_joy_topic"
      android:summary="@string/pref_summary_joy_topic"
      android:title="@string/pref_title_joy_topic"
      android:dialogTitle="@string/pref_dialog_title_joy_topic"
      android:defaultValue="joy_command/joy"/>
  </PreferenceCategory>

  <PreferenceCategory 
    android:title="@string/pref_title_platform_battery"
    android:key="pref_key_platform_battery">
    <EditTextPreference 
      android:key="pref_key_get_voltage_server"
      android:summary="@string/pref_summary_get_voltage_server"
      android:title="@string/pref_title_get_voltage_server"
      android:dialogTitle="@string/pref_dialog_title_get_voltage_server"
      android:defaultValue="smc_server/get_voltage"/>
    <EditTextPreference 
      android:key="pref_key_battery_min_voltage"
      android:summary="@string/pref_summary_battery_min_voltage"
      android:title="@string/pref_title_battery_min_voltage"
      android:dialogTitle="@string/pref_dialog_title_battery_min_voltage"
      android:defaultValue="7.2"/>
    <EditTextPreference 
      android:key="pref_key_battery_max_voltage"
      android:summary="@string/pref_summary_battery_max_voltage"
      android:title="@string/pref_title_battery_max_voltage"
      android:dialogTitle="@string/pref_dialog_title_battery_max_voltage"
      android:defaultValue="8.4"/>
  </PreferenceCategory>
      
  <PreferenceCategory 
    android:title="@string/pref_title_platform_cylinder"
    android:key="pref_key_platform_cylinder">
    <EditTextPreference 
      android:key="pref_key_set_speed_server"
      android:summary="@string/pref_summary_set_speed_server"
      android:title="@string/pref_title_set_speed_server"
      android:dialogTitle="@string/pref_dialog_title_set_speed_server"
      android:defaultValue="smc_server/set_speed"/>
    <EditTextPreference 
      android:key="pref_key_get_limits_server"
      android:summary="@string/pref_summary_get_limits_server"
      android:title="@string/pref_title_get_limits_server"
      android:dialogTitle="@string/pref_dialog_title_get_limits_server"
      android:defaultValue="smc_server/get_limits"/>
    <CheckBoxPreference 
      android:key="pref_key_limits_invert"
      android:summary="@string/pref_summary_limits_invert"
      android:title="@string/pref_title_limits_invert"
      android:defaultValue="false"/>
  </PreferenceCategory>
</PreferenceScreen>
