<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory 
    android:title="@string/pref_title_controls_joystick_left"
    android:key="pref_key_controls_joystick_left">
    <ListPreference
      android:key="pref_key_joystick_left_channel_x"
      android:summary="@string/pref_summary_joystick_left_channel_x"
      android:title="@string/pref_title_joystick_left_channel_x"
      android:entries="@array/joy_channels"
      android:entryValues="@array/joy_channels"
      android:defaultValue="0"/>
    <CheckBoxPreference 
      android:key="pref_key_joystick_left_lock_x"
      android:summary="@string/pref_summary_joystick_left_lock_x"
      android:title="@string/pref_title_joystick_left_lock_x"
      android:defaultValue="true"/>
    <ListPreference
      android:key="pref_key_joystick_left_channel_y"
      android:summary="@string/pref_summary_joystick_left_channel_y"
      android:title="@string/pref_title_joystick_left_channel_y"
      android:entries="@array/joy_channels"
      android:entryValues="@array/joy_channels"
      android:defaultValue="1"/>
    <CheckBoxPreference 
      android:key="pref_key_joystick_left_lock_y"
      android:summary="@string/pref_summary_joystick_left_lock_y"
      android:title="@string/pref_title_joystick_left_lock_y"
      android:defaultValue="false"/>
  </PreferenceCategory>
  
  <PreferenceCategory 
    android:title="@string/pref_title_controls_joystick_right"
    android:key="pref_key_controls_joystick_right">
    <ListPreference
      android:key="pref_key_joystick_right_channel_x"
      android:summary="@string/pref_summary_joystick_right_channel_x"
      android:title="@string/pref_title_joystick_right_channel_x"
      android:entries="@array/joy_channels"
      android:entryValues="@array/joy_channels"
      android:defaultValue="3"/>
    <CheckBoxPreference 
      android:key="pref_key_joystick_right_lock_x"
      android:summary="@string/pref_summary_joystick_right_lock_x"
      android:title="@string/pref_title_joystick_right_lock_x"
      android:defaultValue="false"/>
    <ListPreference
      android:key="pref_key_joystick_right_channel_y"
      android:summary="@string/pref_summary_joystick_right_channel_y"
      android:title="@string/pref_title_joystick_right_channel_y"
      android:entries="@array/joy_channels"
      android:entryValues="@array/joy_channels"
      android:defaultValue="2"/>
    <CheckBoxPreference 
      android:key="pref_key_joystick_right_lock_y"
      android:summary="@string/pref_summary_joystick_right_lock_y"
      android:title="@string/pref_title_joystick_right_lock_y"
      android:defaultValue="true"/>
  </PreferenceCategory>
</PreferenceScreen>
