<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/ch.ethz.naro"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/layout_left"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:gravity="center"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/space_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ch.ethz.naro.VirtualJoystick
            android:id="@+id/joystick_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_view_joystick_left"
            android:layout_centerHorizontal="true"
            app:thumb="@drawable/joystick"
            app:thumbRadius="35dp" />

        <TextView
            android:id="@+id/text_view_joystick_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/left_joystick_text" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_center"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="0.6"
        android:gravity="center"
        android:paddingBottom="10dp" >

        <Gallery
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="20dp"
            android:spacing="50dp" />

        <ch.ethz.naro.VirtualSlider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_above="@+id/text_view_slider"
            android:layout_centerHorizontal="true"
            app:thumb="@drawable/slider" />

        <TextView
            android:id="@+id/text_view_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="0dp"
            android:gravity="center"
            android:text="@string/slider_text" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_right"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:gravity="center"
        android:paddingBottom="10dp" >

        <TextView
            android:id="@+id/space_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ch.ethz.naro.VirtualJoystick
            android:id="@+id/joystick_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_joystick_right"
            app:thumb="@drawable/joystick"
            app:thumbRadius="35dp" />

        <TextView
            android:id="@+id/text_joystick_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/right_joystick_text" />
        
    </RelativeLayout>

</LinearLayout>